--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "photo-website",
+  "homepage": "http://hankhsiao823.github.io/photo-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +11,12 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
