--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "photo-website",
-  "homepage": "http://hankhsiao823.github.io/photo-web",
+  "homepage": "http://hankhsiao823.github.io/photo-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
